<resources>
    <string name="app_name">MyTime</string>
    <string name="overview_title">Overview</string>
    <string name="menubar_content_desc">menu button</string>
    <string name="overview_today">Today</string>
    <string name="pending_events">Pending events</string>
    <string name="editevent_title">Edit Event</string>
    <string name="editevent_eventname">Event Name</string>
    <string name="editevent_noday">Select Day</string>
    <string name="editevent_no_start_time">Select Start Time</string>
    <string name="editevent_no_end_time">Select End Time</string>
    <string name="editevent_no_location">Location</string>
    <string name="editevent_no_notification">Set Notification</string>
    <string name="on_time_event">One Time Event</string>
    <string name="editevent_no_notes">Add Notes</string>
    <string name="editevent_save">Save</string>
    <string name="day_picker_title">Select a day:</string>
    <string name="notification_picker_title">Select a notification:</string>
    <string name="notification_none">None</string>
    <string name="notification_10min">10 minutes before</string>
    <string name="notification_30min">30 minutes before</string>
    <string name="notification_1hour">1 hour before</string>
    <string name="notification_3hours">3 hours before</string>
    <string name="notification_1day">1 day before</string>
    <string name="viewevent_title">View Event</string>
    <string name="timetable_title">Time Table</string>
    <string name="hour_1">1</string>
    <string name="hour_2">2</string>
    <string name="hour_3">3</string>
    <string name="hour_4">4</string>
    <string name="hour_5">5</string>
    <string name="hour_6">6</string>
    <string name="hour_7">7</string>
    <string name="hour_8">8</string>
    <string name="hour_9">9</string>
    <string name="hour_10">10</string>
    <string name="hour_11">11</string>
    <string name="hour_12">12</string>
    <string name="hour_13">13</string>
    <string name="hour_14">14</string>
    <string name="hour_15">15</string>
    <string name="hour_16">16</string>
    <string name="hour_17">17</string>
    <string name="hour_18">18</string>
    <string name="hour_19">19</string>
    <string name="hour_20">20</string>
    <string name="hour_22">22</string>
    <string name="hour_21">21</string>
    <string name="hour_23">23</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="title_activity_weekly_schedule">WeeklySchedule</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_weekly_schedule">Weekly Schedule</string>
    <string name="editevent">Edit Event</string>
    <string name="weekly_schedule_title">Weekly Schedule</string>
    <string name="settings_title">Settings</string>
    <string name="settings_darktheme">Dark Theme</string>
    <string name="nav_settings">Settings</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="delete_event">Delete Event</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login:</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome!</string>
    <string name="overview_tomorrow">Tomorrow</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="loading">Loading...</string>
    <string name="important_event">Important Event</string>
    <string name="hide_non_important">Hide Non Important</string>
</resources>