<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    tools:ignore="UseAppTint">

    <TextView
        android:id="@+id/textview_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/settings_title"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/imagebutton_settings_sidebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/weekly_schedule_title"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textview_settings_title"
        app:layout_constraintEnd_toStartOf="@+id/textview_settings_title"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_settings_title"
        android:src="@drawable/menu_icon"
        android:tint="@color/secondary" />

    <View
        android:id="@+id/view_weeklyschedule_header_line"
        android:layout_width="406dp"
        android:layout_height="1dp"
        android:layout_marginTop="85dp"
        android:background="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawerlayout_settings"
        android:layout_marginTop="86dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                        android:id="@+id/button_settings_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/switch_theme"
                        android:fontFamily="@font/quicksand_semibold"
                        app:backgroundTint="@color/on_background"
                        app:iconTint="@null" />

                <Button
                    android:id="@+id/button_settings_logout"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/sign_out"
                    android:fontFamily="@font/quicksand_semibold"
                    app:backgroundTint="@color/on_background"
                    app:iconTint="@null"
                    app:icon="@drawable/google_logo" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationview_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/nav_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>